--- a/frontend/src/components/layout/navbar.css
+++ b/frontend/src/components/layout/navbar.css
@@ -98,6 +98,7 @@
     background-color: transparent;
     border: none;
     outline: none;
+}
 
 .redditNavbar .tabs > a {
     font-family: 'IBM Plex Sans', sans-serif;
