backend find communities, pagination & sorting frontend

--- a/frontend/src/components/layout/navbar.css
+++ b/frontend/src/components/layout/navbar.css
@@ -100,6 +100,10 @@
     height: 40px;
 }
 
+.searchBar__icon {
+    margin-left: 5px;
+}
+
 .searchBar > input {
     background-color: transparent;
     border: none;
