--- a/frontend/src/components/communities/SearchCommunities.css
+++ b/frontend/src/components/communities/SearchCommunities.css
@@ -20,6 +20,10 @@
     font-size: 13px;
 }
 
+.search__sortby{
+    margin-left: 10px;
+}
+
 .search__communities{
     margin-top: 10px;
     width: 90%;
@@ -27,9 +31,14 @@
     background-color: white;
 }
 
+.search__noresults{
+    margin-left: 10px;
+    font-size: 25px;
+}
+
 .search__community{
     width: 100%;
-    height: 50px;
+    height: 75px;
     border-bottom: 1px solid lightgray;
     display: flex;
     align-items: center;
@@ -44,6 +53,7 @@
 
 .search__communityname{
     font-size: 15px;
+    font-weight: bold;
 }
 
 .search__communitymembers{
@@ -59,7 +69,7 @@
 }
 
 .search__communitydescription > p {
-    font-size: 12px;
+    font-size: 14px;
     color: gray;
 }
 
@@ -75,4 +85,33 @@
     color: white;
     font-weight: bold;
     border-radius: 7px;
+}
+
+.search__paginate {
+    margin-top: 10px;
+    display:flex;
+    justify-content: center;
+}
+
+.page{
+    padding: 7px;
+    font-weight: bold;
+}
+
+.prev__page{
+    padding: 7px;
+    font-weight: bold;
+}
+
+.next__page{
+    padding: 7px;
+    font-weight: bold;
+}
+
+.active {
+    color: #ff4500;
+}
+
+.disabled{
+    visibility: hidden;
 }
