--- a/frontend/src/components/dashboard/dashboard.css
+++ b/frontend/src/components/dashboard/dashboard.css
@@ -45,10 +45,20 @@
     outline: none;
 }
 
+.dashboard__loading {
+    margin-top: 20px;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.dashboard__none{
+    font-size: 25px;
+}
+
 .dashboard__textpost {
     background-color: white;
     width: 80%;
-    height: 225px;
+    height: 180px;
     margin-bottom: 15px;
     display:flex;
 }
@@ -124,7 +134,7 @@
 }
 
 .post__comments{
-    height: 60%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
