--- a/frontend/src/components/communities/SearchCommunities.css
+++ b/frontend/src/components/communities/SearchCommunities.css
@@ -38,7 +38,7 @@
 
 .search__community{
     width: 100%;
-    height: 75px;
+    height: 95px;
     border-bottom: 1px solid lightgray;
     display: flex;
     align-items: center;
@@ -48,10 +48,18 @@
     margin-left: 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .search__vote > span {
     font-size: 12px;
+    font-weight: bold;
+}
+
+.search__arrow {
+    outline:none;
+    border: none;
+    background-color: transparent;
 }
 
 .search__communityinfo{
